fix: warn when files can not be read
fix warnings